<resources>
    <string name="app_name">Science &amp; Tech News</string>
    <string name="play_store_link">link_goes_here</string>
    <string name="tagline">The Stuff You Need To Know!</string>
    <string name="app_name_with_version">Science &amp; Tech News v1.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">1593033387679047</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_house_keeping">HouseKeeping</string>
    <string name="load_more_news">More Chips...</string>
    <string name="share_using">Share Using...</string>

    <string name="load_the_title">More Daily News</string>
    <string name="load_computing">More Of Computing News</string>
    <string name="load_internet">More Of Internet</string>
    <string name="load_mobile">More Of Mobile&amp;Gear</string>
    <string name="laod_business">More Of Business</string>
    <string name="laod_security">More Of Security</string>
    <string name="load_robot">More Of Robotics</string>
    <string name="load_culture">More Of Culture &amp; Design</string>
    <string name="load_science">More Of Science &amp; Biomedical</string>
    <string name="load_energy">More Of Energy &amp; Transport</string>

    <string name="brightness_control">Brightness Control</string>
    <string name="open_fav">Open Favorites</string>
    <string name="font_up">Increase Font Size</string>
    <string name="font_down">Decrease Font Size </string>
    <string name="settings">Settings</string>
    <string name="title_activity_av">av</string>

    <string name="no_favs">You Havent Marked Any Favorites</string>
    <string name="title_activity_display_news">DisplayNews</string>
    <string name="version_code">v1.0</string>


    <string name="disclaimer">all articles  displayed here are copyrighted and belong to their respective owners</string>
    <string name="sience_tech">Science &amp; Tech News</string>


    <string name="display_news">DisplayNews</string>
    <string name="the_daily">The Daily</string>
    <string name="Computing">Computing </string>
    <string name="Internet">Internet</string>
    <string name="Mobile">Mobile &amp; Gear</string>
    <string name="Business">Business</string>
    <string name="Security">Security</string>
    <string name="Robotics">Robotics</string>
    <string name="Culture">Culture &amp; Design</string>
    <string name="Science">Science &amp; Biomedicine</string>
    <string name="Energy">Energy &amp; Transport</string>
    <string name="Favorites">Favorites</string>


    <string name="starting_app">Starting APP</string>
    <string name="exit_notice">News could not be downloaded,please check your connection.</string>
    <string name="crash_toast_text">Things always wont go as planned,Please report the issue</string>
</resources>
