<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_brightness"
        android:icon="@drawable/ic_action_brightness"
        android:title="@string/brightness_control"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/font_up"
        android:icon="@drawable/ic_action_font_up"
        android:title="@string/font_up"
        app:showAsAction="always" />

    <item
        android:id="@+id/font_down"
        android:icon="@drawable/ic_action_font_down"
        android:title="@string/font_down"
        app:showAsAction="always" />


    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />


</menu>
